--- a/components/eventreportingform/default.htm
+++ b/components/eventreportingform/default.htm
@@ -49,23 +49,33 @@
             </div>
 
             <div class="row box">
-                <div class="col-xs-12 col-md-6">
+                <div class="col-xs-12 col-md-12">
 
                             <div class="inputLabel">Event name</div>
                             <div class="field">
-                                <input type="text" name="event_name" value="" class="DPText" size="2">
+                                <input type="text" name="event_name" value="" class="DPText">
+                            </div>
+
+                </div>
+            </div>
+
+            <div class="row box">
+                <div class="col-xs-12 col-md-6">
+
+                            <div class="inputLabel">Event start date</div>
+                            <div class="field">
+                                <input type="text" name="event_start" value="" class="DPText" size="2" id="datepicker_start">
                             </div>
 
                 </div>
                 <div class="col-xs-12 col-md-6">
-
-                            <div class="inputLabel">Event date</div>
+                            <div class="inputLabel">Event end date</div>
                             <div class="field">
-                                <input type="text" name="event_date" value="" class="DPText" size="2" id="datepicker">
+                                <input type="text" name="event_end" value="" class="DPText" size="2" id="datepicker_end">
                             </div>
                     <script>
                         $( function() {
-                            $( "#datepicker" ).datepicker({
+                            $("#datepicker_start, #datepicker_end").datepicker({
                                 dateFormat: 'dd-mm-yy',
                                 minDate: 0,
                                 changeMonth: true,
