--- a/components/eventreportingform/default.htm
+++ b/components/eventreportingform/default.htm
@@ -12,12 +12,14 @@
             </div>
 
             <input type="hidden" name="user_id" class="DPText" size="2" value="{{user.id}}">
+            <input type="hidden" name="slug" class="DPText" size="2" value="{{event.slug}}">
+            <input type="hidden" name="internal_event_id" class="DPText" size="2" value="{{event.id}}">
 
             <div class="row box">
                 <div class="col-xs-12 col-md-12">
                     <div class="inputLabel">Event name <span class="red">*</span></div>
                     <div class="field">
-                        <input type="text" name="event_name" value="" class="DPText">
+                        <input type="text" name="event_name" value="{{event.title}}" class="DPText">
                     </div>
                 </div>
             </div>
@@ -27,20 +29,24 @@
 
                             <div class="inputLabel">Event start date <span class="red">*</span></div>
                             <div class="field">
-                                <input type="text" name="event_start" value="" class="DPText" size="2" id="datepicker_start">
+                                <input type="text" name="event_start" value="{{event.start|date('d-m-Y H:i')}}" class="DPText" size="2" id="datepicker_start">
                             </div>
 
                 </div>
                 <div class="col-xs-12 col-md-6">
                             <div class="inputLabel">Event end date <span class="red">*</span></div>
                             <div class="field">
-                                <input type="text" name="event_end" value="" class="DPText" size="2" id="datepicker_end">
+                                <input type="text" name="event_end" value="{{event.end|date('d-m-Y H:i')}}" class="DPText" size="2" id="datepicker_end">
                             </div>
                     <script>
                         $( function() {
-                            $("#datepicker_start, #datepicker_end").datepicker({
+                            // var start;
+                            $("#datepicker_start, #datepicker_end").datetimepicker({
                                 dateFormat: 'dd-mm-yy',
-                                minDate: 0,
+                                timeFormat: 'HH:mm',
+                                minDate: null,
+                                minHour: null,
+                                minMinutes: null,
                                 changeMonth: true,
                                 changeYear: true,
                                 dayNamesShort: [ "Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat" ],
@@ -55,7 +61,7 @@
 
                             <div class="inputLabel">Organiser <span class="red">*</span></div>
                             <div class="field">
-                                <input type="text" name="organiser" value="" class="DPText" size="2">
+                                <input type="text" name="organiser" value="{{event.organiser}}" class="DPText" size="2">
                             </div>
 
                 </div>
@@ -66,8 +72,8 @@
                             <div class="field">
                                 <select name="project_organised">
                                     <option value="">-- Choose --</option>
-                                    <option value="1">{{project_name}} organised</option>
-                                    <option value="2">{{project_name}} relevant</option>
+                                    <option value="1" {% if event.identifier == 1 %} selected {% endif %}>{{project_name}} organised</option>
+                                    <option value="2" {% if event.identifier == 2 %} selected {% endif %}>{{project_name}} relevant</option>
                                 </select>
                             </div>
 
@@ -78,7 +84,7 @@
                 <div class="col-xs-12 col-md-6">
                             <div class="inputLabel">Venue <span class="red">*</span></div>
                             <div class="field">
-                                <input type="text" name="venue" value="" class="DPText" size="2">
+                                <input type="text" name="venue" value="{{event.place}}" class="DPText" size="2">
                             </div>
 
                 </div>
@@ -87,9 +93,9 @@
                             <div class="field">
                                 <select name="online_hybrid_onsite">
                                     <option value="">-- Choose --</option>
-                                    <option value="1">Online</option>
-                                    <option value="2">Hybrid</option>
-                                    <option value="3">On Site</option>
+                                    <option value="1" {% if event.online_hybrid_onsite == 1 %} selected {% endif %}>Online</option>
+                                    <option value="2" {% if event.online_hybrid_onsite == 2 %} selected {% endif %}>Hybrid</option>
+                                    <option value="3" {% if event.online_hybrid_onsite == 3 %} selected {% endif %}>On Site</option>
                                 </select>
                             </div>
                 </div>
@@ -99,7 +105,7 @@
                 <div class="col-xs-12 col-md-6">
                             <div class="inputLabel">Link to event website</div>
                             <div class="field">
-                                <input type="text" name="website" value="" class="DPText" size="2">
+                                <input type="text" name="website" value="{{event.url}}" class="DPText" size="2">
                             </div>
 
                 </div>
@@ -109,8 +115,8 @@
                     <div class="field">
                         <select name="is_internal">
                             <option value="">-- Choose --</option>
-                            <option value="0">Public</option>
-                            <option value="1">Internal</option>
+                            <option value="0" {% if event.is_internal == 0 %} selected {% endif %}>Public</option>
+                            <option value="1" {% if event.is_internal == 1 %} selected {% endif %}>Internal</option>
                         </select>
                         <small>Internal events can be viewed only by consortium members upon login to the Internal Repository.</small>
                     </div>
